--- a/EFI-Debug/OC/config.plist
+++ b/EFI-Debug/OC/config.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key># BASE EFI INTEL X99 BROADWELL(E) - DEBUG Version</key>
 	<string></string>
-	<key># BY: https://github.com/EntusiastadomacOS</key>
+	<key># BY: https://luananalistadeti.netlify.app/</key>
 	<string></string>
 	<key>ACPI</key>
 	<dict>
